2006-12-12  Akim Demaille  <demaille@gostai.com>

	Formatting changes
	* src/ucommand.hh, src/userver.cc: here.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	White space changes
	* src/ucommand.cc: here.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	UDEBUG_EXPR
	* src/uexpression.cc: New.
	(UExpression::print): Use it.
	Should be used more widely.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	One parser per connection
	* src/userver.cc, src/userver.hh: No longer aggregate a parser.
	* src/uconnection.cc, src/uconnection.hh (parser_, parser): New.
	(lastloc): Move to...
	* src/parser/uparser.hh: here.
	* src/parser/bison/ugrammar.y: Adjust.
	* src/ucommand.cc, src/uexpression.cc: Adjust to find the connection's
	parser, not the server's.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	Add printers for strings in the parser
	* src/ustring.hh (operator<< (ostream, UString)): New.
	* src/parser/bison/ugrammar.y: Add %printer for UString value.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	Formatting changes
	* src/uconnection.cc: here.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	Return access to members by reference, not pointers
	* src/uconnection.hh (recvQueue): Return a reference, to make
	it clear the ownership is not given away.
	* src/console.cc, src/userver.cc: Adjust.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	Fix the previous checkin
	* src/uconnection.cc: Propagate the fact that queues are no
	longer pointers.
	* src/uvalue.cc: Ditto.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	Aggregate UQueues in UConnection
	* src/uconnection.cc, src/uconnection.hh: Here.
	Adjust ctor and dtor.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	message for warnings
	* src/uconnection.cc (error_message): Rename as...
	(message): this.
	(message): New overloaded version for warnings.
	(UConnection::warning): Use it.

2006-12-12  Akim Demaille  <demaille@gostai.com>

	error_message