@@ -1,5 +1,15 @@
 2006-12-12  Akim Demaille  <demaille@gostai.com>
 
+	UParsers know their UConnection
+	* src/parser/uparser.cc, src/parser/uparser.hh (UParser::connection):
+	New.
+	(UParser::UParser, UParser::process): Adjust.
+	* src/ucommand.cc, src/uexpression.cc, src/userver.cc: Adjust.
+	* src/uconnection.cc, src/uconnection.hh: Pass the connection
+	to the parser ctor.
+
+2006-12-12  Akim Demaille  <demaille@gostai.com>
+
 	Formatting changes
 	* src/ucommand.hh, src/userver.cc: here.
 
